Fix spacing and contrast on table th

--- a/css/global.css
+++ b/css/global.css
@@ -250,7 +250,8 @@ table {
 th {
     text-align: left;
     vertical-align: bottom;
-    padding: .5em 2em .5em 0;
+    padding: 1em 2em 0 0;
+    text-transform: uppercase;
     border-bottom: none;
     font-weight: bold;
     color: #363d40;
